finished Related Work

--- a/text/tex/bibliography.bib
+++ b/text/tex/bibliography.bib
@@ -766,3 +766,85 @@
 	isbn = {0130851981},
 	publisher = {Prentice Hall Professional Technical Reference},
 } 
+
+@inproceedings{Zhang:2010:RVT:1937728.1937766,
+	author = {Zhang, Shengping and Wu, Junpeng and Tian, Yuan and Liu, Shaohui and Sun, Xin},
+	title = {Robust Visual Tracking Based on Occlusion Detection and Particle Redistribution},
+	booktitle = {Proceedings of the Second International Conference on Internet Multimedia Computing and Service},
+	series = {ICIMCS '10},
+	year = {2010},
+	isbn = {978-1-4503-0460-3},
+	location = {Harbin, China},
+	pages = {159--162},
+	numpages = {4},
+	url = {http://doi.acm.org/10.1145/1937728.1937766},
+	doi = {10.1145/1937728.1937766},
+	acmid = {1937766},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {occlusion, region growth, visual tracking},
+} 
+
+@inproceedings{conf/iccv/KwakNHH11,
+	added-at = {2012-01-19T00:00:00.000+0100},
+	author = {Kwak, Suha and Nam, Woonhyun and Han, Bohyung and Han, Joon Hee},
+	biburl = {http://www.bibsonomy.org/bibtex/287c7f6f14eb80eac2fe9011b6c6c2942/dblp},
+	booktitle = {ICCV},
+	crossref = {conf/iccv/2011},
+	editor = {Metaxas, Dimitris N. and Quan, Long and Sanfeliu, Alberto and Gool, Luc J. Van},
+	ee = {http://dx.doi.org/10.1109/ICCV.2011.6126414},
+	interhash = {d9690c84f328f5895d3ea6765c75c82d},
+	intrahash = {87c7f6f14eb80eac2fe9011b6c6c2942},
+	isbn = {978-1-4577-1101-5},
+	keywords = {dblp},
+	pages = {1551-1558},
+	publisher = {IEEE Computer Society},
+	timestamp = {2016-02-23T12:04:47.000+0100},
+	title = {Learning occlusion with likelihoods for visual tracking.},
+	url = {http://dblp.uni-trier.de/db/conf/iccv/iccv2011.html#KwakNHH11},
+	year = 2011
+}
+
+@inproceedings{Snavely:2006:PTE:1179352.1141964,
+	author = {Snavely, Noah and Seitz, Steven M. and Szeliski, Richard},
+	title = {Photo Tourism: Exploring Photo Collections in 3D},
+	booktitle = {ACM SIGGRAPH 2006 Papers},
+	series = {SIGGRAPH '06},
+	year = {2006},
+	isbn = {1-59593-364-6},
+	location = {Boston, Massachusetts},
+	pages = {835--846},
+	numpages = {12},
+	url = {http://doi.acm.org/10.1145/1179352.1141964},
+	doi = {10.1145/1179352.1141964},
+	acmid = {1141964},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {image-based modeling, image-based rendering, photo browsing, structure from motion},
+} 
+
+@inproceedings{ChangchangWu:2011:MBA:2191740.2191945,
+	author = {Changchang Wu and Agarwal, S. and Curless, B. and Seitz, S. M.},
+	title = {Multicore Bundle Adjustment},
+	booktitle = {Proceedings of the 2011 IEEE Conference on Computer Vision and Pattern Recognition},
+	series = {CVPR '11},
+	year = {2011},
+	isbn = {978-1-4577-0394-2},
+	pages = {3057--3064},
+	numpages = {8},
+	url = {http://dx.doi.org/10.1109/CVPR.2011.5995552},
+	doi = {10.1109/CVPR.2011.5995552},
+	acmid = {2191945},
+	publisher = {IEEE Computer Society},
+	address = {Washington, DC, USA},
+} 
+
+@article{Furu:2010:PMVS,
+	author    = "Yasutaka Furukawa and Jean Ponce",
+	title     = "Accurate, Dense, and Robust Multi-View Stereopsis",
+	journal   = "IEEE Trans. on Pattern Analysis and Machine Intelligence",
+	year = "2010",
+	volume = "32",
+	number = "8",
+	pages = "1362--1376"
+}
